--- a/src/app/features/offerbook/offer/offer.component.scss
+++ b/src/app/features/offerbook/offer/offer.component.scss
@@ -4,22 +4,56 @@
     width: 100%
 }
 .offer{
-
+    &__container{
+        padding: 0 1em;
+    }
     &__refresh{
          font-size: 1em;
     }
+    &__mobilewrap{
+        position: sticky;
+        top: 6rem;
+        z-index: 10;
+        height: 4rem;
+        overflow: hidden;
+
+    }
     &__navigate{
+        overflow: hidden;
+
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
     
-        padding-bottom: 1.5rem;
+        padding-bottom: 1.5em;
+        transition: all linear .6s;
+
+    }
+    &__hidenavigate{
+        visibility: hidden;
+        margin-top: -30%;
+
+    }
+    &__mobilebtn{
+        position: relative;
+        z-index: 10;
+        background-color: rgba(255, 255, 255, 0.7);
     }
     &__filter{
         font-weight: bold;
     }
-}
-@media screen and (max-width: breakpoint(laptop)) {
+    &__mobilefilter{
+        transition: all cubic-bezier(0.68,-0.55,0.265,1.55) 1s;
 
- 
+    }
+    &__filterhidden{
+        // display: none;
+        visibility: hidden;
+        margin-left: -150%;
+        transition: all cubic-bezier(0.68,-0.55,0.265,1.55) 1s;
+
+    }
 }
+@media screen and (max-width: breakpoint(mobile)) {
+    
+}
+ 
