--- a/src/app/features/offerbook/request/request.component.html
+++ b/src/app/features/offerbook/request/request.component.html
@@ -1,29 +1,31 @@
-<div class="request__navigate">
-    <mat-button-toggle-group name="requestFilter" aria-label="Filter" [value] ="requestFacade.requestFilterName$ | async">
-        <mat-button-toggle value="all" (click) = "filterAll()">Все</mat-button-toggle>
-        <mat-button-toggle class="request__filter" (click) = "filterActive()" value="active">Активные</mat-button-toggle>
-        <mat-button-toggle class="request__filter" (click) = "filterCompleted()" value="completed">Завершённые</mat-button-toggle>
-    </mat-button-toggle-group>
+<div class="request__container">
+    <div class="request__navigate">
+        <mat-button-toggle-group name="requestFilter" aria-label="Filter" [value] ="requestFacade.requestFilterName$ | async">
+            <mat-button-toggle value="all" (click) = "filterAll()">Все</mat-button-toggle>
+            <mat-button-toggle class="request__filter" (click) = "filterActive()" value="active">Активные</mat-button-toggle>
+            <mat-button-toggle class="request__filter" (click) = "filterCompleted()" value="completed">Завершённые</mat-button-toggle>
+        </mat-button-toggle-group>
 
-    <ng-container *ngIf="(requestFacade.requestList$ | async).length ">
-        <app-button-wrap *ngFor="let i of arr">
-           <ng-container *ngIf="!lessThenWidth(appFacade.screenWidth$ | async); else createIcon">Создать запрос</ng-container> 
-        </app-button-wrap>
+        <ng-container *ngIf="(requestFacade.requestList$ | async).length ">
+            <app-button-wrap *ngFor="let i of arr">
+            <ng-container *ngIf="!lessThenWidth(appFacade.screenWidth$ | async); else createIcon">Создать запрос</ng-container> 
+            </app-button-wrap>
+        </ng-container>
+    </div>
+    <ng-template #createIcon>
+        <span class="material-icons"> add </span>
+    </ng-template>
+
+    <div class="request__list">
+        <app-request-item 
+            *ngFor="let request of requestFacade.filteredRequestList$ | async; let i = index"
+            [index]="i+1"
+            [userRequest]="request">
+        </app-request-item>
+    </div>
+    <ng-container *ngIf="requestFacade.listIsEmpty$ | async">
+        <div class="first-request-button">
+            <app-button-wrap *ngFor="let i of arr">Сделай свой первый запрос!</app-button-wrap>
+        </div>
     </ng-container>
 </div>
-<ng-template #createIcon>
-    <span class="material-icons"> add </span>
-</ng-template>
-
-<div class="request__list">
-    <app-request-item 
-        *ngFor="let request of requestFacade.filteredRequestList$ | async; let i = index"
-        [index]="i+1"
-        [userRequest]="request">
-    </app-request-item>
-</div>
-<ng-container *ngIf="requestList && !(requestFacade.requestList$ | async).length ">
-    <div class="first-request-button">
-        <app-button-wrap *ngFor="let i of arr">Сделай свой первый запрос!</app-button-wrap>
-    </div>
-</ng-container>
