feat: full adaptive added

--- a/src/app/features/offerbook/offer/offer.component.html
+++ b/src/app/features/offerbook/offer/offer.component.html
@@ -59,7 +59,8 @@
   <app-actual-request *ngFor="let request of offerFacade.paginatedRequestList$ | async; let i = index"
   [request]="request"
   [index]="i+1"
-  [currentUser]="currentUser">
+  [currentUser]="currentUser"
+  [screenWidth]="screenWidth">
   </app-actual-request>
   </div>
 
