--- a/src/app/features/offerbook/request/request-popup/request-popup.component.html
+++ b/src/app/features/offerbook/request/request-popup/request-popup.component.html
@@ -46,7 +46,7 @@
     
   </div>
   <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Отменить</button>
+    <button mat-button mat-dialog-close>Отмена</button>
     <button mat-raised-button
       mat-dialog-close 
       type="submit" 
@@ -60,5 +60,5 @@
       requestForm.controls['description'].invalid ||
       requestForm.controls['category'].invalid ||
       requestForm.controls['city'].invalid ||
-      requestForm.controls['requestImage'].invalid">Отправить</button>
+      requestForm.controls['requestImage'].invalid">Ок</button>
   </div>
