--- a/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
+++ b/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
@@ -56,6 +56,17 @@
         font-size: 1em;
         width: 100%;
     }
+    &__button_accepted{
+        color: $accepted;
+        border: 1px solid $accepted;
+    }
+    &__button_rejected{
+        color: rejected !important;
+        border: 1px solid $rejected;
+    }
+    .disabled{
+        color: $disabled;
+    }
     &__remove{
         flex: 0 1 10%;
 
@@ -94,10 +105,10 @@
     }
 }
 .accepted{
-    background-color: rgb(126, 212, 126);
+    border: 1px solid $accepted;
 }
 .rejected{
-    background-color: rgb(236, 134, 143);
+    border: 1px solid $rejected;
 }
 .btnwrapper{
     font-size: 1em;
