--- a/src/app/features/offerbook/request/request-popup/request-popup.component.html
+++ b/src/app/features/offerbook/request/request-popup/request-popup.component.html
@@ -1,5 +1,6 @@
 <h1 mat-dialog-title>Ваша заявка</h1>
-<div mat-dialog-content [formGroup]="requestForm" (ngSubmit)="submitForm()" class="request-form">
+<div mat-dialog-content >
+  <form [formGroup]="requestForm" (ngSubmit)="submitForm()" class="request-form">
     <mat-form-field>
         <mat-label>Введите название</mat-label>
         <input matInput
@@ -32,10 +33,19 @@
   </mat-form-field>
   <mat-checkbox class="example-margin" formControlName="secondHand">можно б/у</mat-checkbox>
 
+  
+   
+<!-- <input  type="file" name="photo" (change)="lalala($event.target.files)" accept="image/*,image/jpeg" formControlName="requestImage1"> -->
+      
+      
+   
     <mat-form-field>
-      <ngx-mat-file-input formControlName="requestImage"
-        [accept]="'.png,.jpg,.jpeg'"
-       placeholder="Выберите фото" ></ngx-mat-file-input>
+      <mat-label>Введите название</mat-label>
+      <ngx-mat-file-input 
+      formControlName="requestImage"
+      type="file"
+      [accept]="'.png,.jpg,.jpeg'"
+      placeholder="Выберите фото" ></ngx-mat-file-input>
       <mat-icon matSuffix>add_a_photo</mat-icon>
       <mat-error *ngIf="requestForm.get('requestImage').hasError('maxContentSize')">
         Размер файла не должен превышать {{requestForm.get('requestImage')?.getError('maxContentSize').maxSize | byteFormat}}
@@ -43,7 +53,8 @@
         | byteFormat}}).
       </mat-error>
     </mat-form-field>
-    
+
+  </form>
   </div>
   <div mat-dialog-actions>
     <button mat-button mat-dialog-close>Отмена</button>
