--- a/src/app/features/offerbook/request/request-popup/request-popup.component.scss
+++ b/src/app/features/offerbook/request/request-popup/request-popup.component.scss
@@ -3,3 +3,13 @@
     flex-direction: column;
     align-content: center;
 }
+.photo{
+    width: 2rem;
+    height: 2rem;
+    object-fit: cover;
+}
+.tech-photo{
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+}
