--- a/src/app/features/offerbook/request/request-popup/request-popup.component.scss
+++ b/src/app/features/offerbook/request/request-popup/request-popup.component.scss
@@ -4,8 +4,8 @@
     align-content: center;
 }
 .photo{
-    width: 2rem;
-    height: 2rem;
+    max-width: 2rem;
+    max-height: 2rem;
     object-fit: cover;
 }
 .tech-photo{
